force-app/main/default/objects/BookLead__c/BookLead__c.object-meta.xml
<CustomObject>
    <label>Book Lead</label>
    <nameField>
        <label>Book Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>