force-app/main/default/objects/BookLead__c/fields/ARI__c.field-meta.xml
<CustomField>
    <fullName>ARI__c</fullName>
    <label>Automated readability index (ARI)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>