force-app/main/default/objects/BookLead__c/fields/BookExcerpt__c.field-meta.xml
<CustomField>
    <fullName>BookExcerpt__c</fullName>
    <label>Book excerpt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>