force-app/main/default/objects/BookLead__c/fields/ColemanLiau__c.field-meta.xml
<CustomField>
    <fullName>ColemanLiau__c</fullName>
    <label>Coleman-Liau index</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>