force-app/main/default/objects/BookLead__c/fields/Flesch__c.field-meta.xml
<CustomField>
    <fullName>Flesch__c</fullName>
    <label>Flesch reading ease</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>