force-app/main/default/objects/BookLead__c/fields/Gulpease__c.field-meta.xml
<CustomField>
    <fullName>Gulpease__c</fullName>
    <label>Indice Gulpease</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>