force-app/main/default/objects/BookLead__c/fields/isAvailableToPublish__c.field-meta.xml
<CustomField>
    <fullName>isAvailableToPublish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is available to publish</label>
    <type>Checkbox</type>
</CustomField>