force-app/main/default/objects/BookLead__c/fields/PublishApproved__c.field-meta.xml
<CustomField>
    <fullName>PublishApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado publicação</label>
    <type>Checkbox</type>
</CustomField>