force-app/main/default/objects/BookLead__c/fields/ReadingApproved__c.field-meta.xml
<CustomField>
    <fullName>ReadingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado leitura</label>
    <type>Checkbox</type>
</CustomField>